# SDD-messenger-lab

./: .gitignore  README.md  main.py  postman_collection.json  pyproject.toml  pytest.ini
app/api/: deps.py  main.py  schemas.py
app/api/routes/: conversations.py  messages.py  users.py
app/db/: schema.sql
app/models/: domain.py
app/services/: conversation_service.py  errors.py  message_service.py  search_service.py  user_service.py
app/storage/: conversation_repo.py  db.py  message_repo.py  user_repo.py
tests/: conftest.py  test_conversations.py  test_db.py  test_integration.py  test_messages.py  test_search.py  test_users.py
